force-app/main/default/objects/bdrs__Sample__c/bdrs__Sample__c.object-meta.xml
<CustomObject>
    <label>Sample</label>
    <nameField>
        <label>Nome de Sample</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sample</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>