force-app/main/default/objects/bdrs__Sample__c/fields/bdrs__Cep__c.field-meta.xml
<CustomField>
    <fullName>bdrs__Cep__c</fullName>
    <label>Cep</label>
    <length>100</length>
    <type>Text</type>
</CustomField>