force-app/main/default/objects/bdrs__Sample__c/fields/bdrs__CNPJ__c.field-meta.xml
<CustomField>
    <fullName>bdrs__CNPJ__c</fullName>
    <label>CNPJ</label>
    <length>100</length>
    <type>Text</type>
</CustomField>