force-app/main/default/objects/bdrs__Sample__c/fields/bdrs__CPF__c.field-meta.xml
<CustomField>
    <fullName>bdrs__CPF__c</fullName>
    <label>CPF</label>
    <length>100</length>
    <type>Text</type>
</CustomField>