force-app/main/default/objects/bdrs__Sample__c/fields/bdrs__MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>bdrs__MobilePhone__c</fullName>
    <label>MobilePhone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>