force-app/main/default/objects/bdrs__Sample__c/fields/bdrs__Phone__c.field-meta.xml
<CustomField>
    <fullName>bdrs__Phone__c</fullName>
    <label>Phone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>