force-app/main/default/objects/bdrs__Sample__c/fields/bdrs__Time__c.field-meta.xml
<CustomField>
    <fullName>bdrs__Time__c</fullName>
    <label>Time</label>
    <length>5</length>
    <type>Text</type>
</CustomField>