force-app/main/default/objects/bdrs__Sample__c/recordTypes/bdrs__SampleRT.recordType-meta.xml
<RecordType>
    <fullName>bdrs__SampleRT</fullName>
    <active>true</active>
    <label>SampleRT</label>
</RecordType>